# cpp-semver

./: .gitignore  BUILD.bazel  CMakeLists.txt  CODEOWNERS  MODULE.bazel  README.md  WORKSPACE
.github/: pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  sanitize.yml  verify-pr.yml
cmake/: semver-config.cmake.in
example/: compiler-explorer-example.cpp  example.cpp
include/semver/: semver.hpp
module/: semver.cppm
test/: CMakeLists.txt  compare.cpp  increment.cpp  prerelease.cpp  serialization.cpp  version.cpp
